k8s/networking/ingress-config.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: movies-ingress
  namespace: movies-app
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api/(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: movies-api-service
                port:
                  number: 8000
          - path: /(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: movies-front-service 
                port:
                  number: 80
